syntax = "proto3";

service UserService {
    rpc addUser(User) returns (User){}
    rpc getUsers(Empty) returns (Users){}
}

message Empty {
}

message User {
    string name = 1;
    string email = 2;
    string age = 3;
}

message Users {
    repeated User user = 1;
}